--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,12 @@ board_build.partitions = default_16MB.csv
 lib_deps =
     Wire
     https://github.com/Xinyuan-LilyGO/LilyGo-EPD47.git
+build_unflags =
+    -std=gnu99
+    -std=gnu++11
 build_flags =
     -DLUA_32BITS=1
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
+    -std=gnu11
+    -std=gnu++14
