Update partitions file name

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 board_build.f_cpu = 80000000L
 upload_speed = 921600
 monitor_speed = 115200
-board_build.partitions = default_16MB.csv
+board_build.partitions = partitions.csv
 lib_deps =
     Wire
     https://github.com/Xinyuan-LilyGO/LilyGo-EPD47.git
